Infrastructure/Cilium/Policies/node-security-policy.yaml
apiVersion: "cilium.io/v2"
kind: "CiliumClusterwideNetworkPolicy"
metadata:
  name: "node-port-security-baseline"
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  nodeSelector:
    matchLabels:
      kubernetes.io/os: "linux"
  ingress:
  #Allow ssh
  - toPorts:
    - ports:
      - port: "22"
        protocol: TCP
    fromCIDR:
    - "192.168.80.0/24"

  #Allow http/https
  - toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      - port: "443"
        protocol: TCP

  #Allow Node-to-Node Cluster Traffic
  - fromCIDR:
    - "192.168.80.0/24"
    toPorts:
    - ports:
      - port: "6443"     #K8s API Server
        protocol: TCP
      - port: "9345"     #RKE2 Supervisor
        protocol: TCP
      - port: "10250"    #Kubelet API
        protocol: TCP
      - port: "4240"     #Cilium Health
        protocol: TCP
      - port: "51871"    #Cilium Wireguard Tunnel
        protocol: UDP
